tests/ui/image/query/query_size_err.stderr
error[E0277]: the trait bound `Image<f32, 1, 2, 0, 0, 1, 0>: HasQuerySize` is not satisfied
   --> $DIR/query_size_err.rs:12:15
    |
12  |     *output = image.query_size();
    |               ^^^^^ ---------- required by a bound introduced by this call
    |               |
    |               the trait `HasQuerySize` is not implemented for `Image<f32, 1, 2, 0, 0, 1, 0>`
    |
    = help: the following other types implement trait `HasQuerySize`:
              Image<SampledType, 0, DEPTH, ARRAYED, 0, 0, FORMAT>
              Image<SampledType, 0, DEPTH, ARRAYED, 0, 2, FORMAT>
              Image<SampledType, 0, DEPTH, ARRAYED, 1, SAMPLED, FORMAT>
              Image<SampledType, 1, DEPTH, ARRAYED, 0, 0, FORMAT>
              Image<SampledType, 1, DEPTH, ARRAYED, 0, 2, FORMAT>
              Image<SampledType, 1, DEPTH, ARRAYED, 1, SAMPLED, FORMAT>
              Image<SampledType, 2, DEPTH, ARRAYED, 0, 0, FORMAT>
              Image<SampledType, 2, DEPTH, ARRAYED, 0, 2, FORMAT>
            and 6 others
note: required by a bound in `Image::<SampledType, DIM, DEPTH, ARRAYED, MULTISAMPLED, SAMPLED, FORMAT>::query_size`
   --> $SPIRV_STD_SRC/image.rs:878:15
    |
878 |         Self: HasQuerySize,
    |               ^^^^^^^^^^^^ required by this bound in `Image::<SampledType, DIM, DEPTH, ARRAYED, MULTISAMPLED, SAMPLED, FORMAT>::query_size`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
